--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ set( CONFIG_MSG "${CONFIG_MSG}
 endif()
 
 set( CONFIG_MSG "${CONFIG_MSG}
+    BUILD_SHARED_LIBS:                  ${BUILD_SHARED_LIBS}
     CI_MODE:                            ${CI_MODE}
 
 Configured Features:
