Update CMake scripts to enable building both shared and static libraries at the same time

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,6 @@
 option( BUILD_EXAMPLES "Enable building tests" ON )
 
-if( BUILD_EXAMPLES )
+if( BUILD_EXAMPLES AND (BUILD_SHARED_LIB OR BUILD_STATIC_LIB) )
 
     add_subdirectory( ColorConsole )
     add_subdirectory( ColorConsoleW )
