Updated installers setup

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,4 +1,5 @@
-option( BUILD_EXAMPLES "Enable building tests" ON )
+option( BUILD_EXAMPLES "Enable building examples" ON )
+option( INSTALL_EXAMPLES "Enable installing examples" OFF )
 
 if( BUILD_EXAMPLES AND (BUILD_SHARED_LIB OR BUILD_STATIC_LIB) )
 
