--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,6 +4,8 @@ environment:
   matrix:
   - Platform: MSVC64
     Configuration: Release
+    GenerateInstaller: True
+    PublishArtifacts: True
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   # - Platform: MSVC64
   #   Configuration: Release
@@ -14,8 +16,8 @@ environment:
   - Platform: LINUX-GCC
     GccVersion: 9
     Configuration: Release
-    #GenerateInstaller: True
-    #PublishArtifacts: True
+    GenerateInstaller: True
+    PublishArtifacts: True
     APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
   - Platform: LINUX-GCC
     GccVersion: 8
@@ -25,6 +27,12 @@ environment:
     GccVersion: 7
     Configuration: Release
     APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu1804
+  - Platform: TDM-GCC-64
+    PlatformToolset: 9.2.0
+    Configuration: Release
+    GenerateInstaller: True
+    PublishArtifacts: True
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   - Platform: MinGW64
     PlatformToolset: 8.1.0
     Configuration: Release
@@ -33,12 +41,6 @@ environment:
     PlatformToolset: 7.3.0
     Configuration: Release
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-  - Platform: TDM-GCC-64
-    PlatformToolset: 9.2.0
-    Configuration: Release
-    #GenerateInstaller: True
-    #PublishArtifacts: True
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
   - Platform: TDM-GCC-64
     PlatformToolset: 9.2.0
     Configuration: Coverage
