Added option to force using ANSI escape codes in Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ Configured Features:
     ENABLE_INSTALLER:                   ${ENABLE_INSTALLER}
     BUILD_EXAMPLES:                     ${BUILD_EXAMPLES}
     INSTALL_EXAMPLES:                   ${INSTALL_EXAMPLES}
+    FORCE_ANSI_ESCAPE_CODES:            ${FORCE_ANSI_ESCAPE_CODES}
 
 --------------------------------------------------------------------------
 " )
