--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,6 +5,7 @@ project( ColorConsole VERSION 1.0.0 )
 option( BUILD_STATIC_LIB "Build static library" ON )
 option( BUILD_SHARED_LIB "Build shared library" ON )
 option( REQUIRE_INITIALIZATION "Make initialization mandatory" ON )
+option( FORCE_ANSI_ESCAPE_CODES "Force using ANSI escape codes in Windows" OFF )
 
 set( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/" )
 
@@ -93,6 +94,10 @@ if ( BUILD_SHARED_LIB )
         target_compile_definitions( ${PROJECT_NAME} PRIVATE "COLORCONSOLE_REQUIRE_INITIALIZATION" )
     endif()
 
+    if( FORCE_ANSI_ESCAPE_CODES )
+        target_compile_definitions( ${PROJECT_NAME} PRIVATE "COLORCONSOLE_FORCE_ANSI_ESCAPE_CODES" )
+    endif()
+
     #
     # Shared library properties
     #
@@ -115,6 +120,10 @@ if ( BUILD_STATIC_LIB )
 
     if( REQUIRE_INITIALIZATION )
         target_compile_definitions( ${PROJECT_NAME}_static PRIVATE "COLORCONSOLE_REQUIRE_INITIALIZATION" )
+    endif()
+
+    if( FORCE_ANSI_ESCAPE_CODES )
+        target_compile_definitions( ${PROJECT_NAME}_static PRIVATE "COLORCONSOLE_FORCE_ANSI_ESCAPE_CODES" )
     endif()
 
     #
