Updated tests to check actual text output

--- a/test/ColorConsoleW_Init_Win32/CMakeLists.txt
+++ b/test/ColorConsoleW_Init_Win32/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required( VERSION 3.3 )
 
-project( Test.ColorConsoleW_Init )
+project( Test.ColorConsoleW_Init.Win32 )
 
 #
 # Test configuration
@@ -27,7 +27,7 @@ set( PROD_SRC_FILES
 # Add your test source files to the following list
 #
 set( TEST_SRC_FILES
-     ColorConsoleW_Init_test.cpp
+     ColorConsoleW_Init_Win32_test.cpp
      ${MOCKS_DIR}/Win32_mock.cpp
      ${MOCKS_DIR}/Win32_expect.cpp
 )
