--- a/test/ColorConsoleW_Win32/CMakeLists.txt
+++ b/test/ColorConsoleW_Win32/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required( VERSION 3.3 )
 
-project( Test.ColorConsoleW )
+project( Test.ColorConsoleW.Win32 )
 
 #
 # Test configuration
@@ -27,7 +27,7 @@ set( PROD_SRC_FILES
 # Add your test source files to the following list
 #
 set( TEST_SRC_FILES
-     ColorConsoleW_test.cpp
+     ColorConsoleW_Win32_test.cpp
      ${MOCKS_DIR}/Win32_mock.cpp
      ${MOCKS_DIR}/Win32_expect.cpp
 )
