Added tests for ANSI mode (Linux)

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,11 @@ if( ENABLE_TEST )
         add_subdirectory( ColorConsole_Init_Win32 )
         add_subdirectory( ColorConsoleW_Win32 )
         add_subdirectory( ColorConsoleW_Init_Win32 )
+    else()
+        add_subdirectory( ColorConsole_ANSI )
+        add_subdirectory( ColorConsole_Init_ANSI )
+        add_subdirectory( ColorConsoleW_ANSI )
+        add_subdirectory( ColorConsoleW_Init_ANSI )
     endif()
 
 endif()
