Added support for custom consoles.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -27,4 +27,7 @@ if( ENABLE_TEST )
         add_subdirectory( ColorConsoleW_Init_ANSI )
     endif()
 
+    add_subdirectory( ColorConsole_Custom )
+    add_subdirectory( ColorConsoleW_Custom )
+
 endif()
