--- a/test/ColorConsole_Win32/CMakeLists.txt
+++ b/test/ColorConsole_Win32/CMakeLists.txt
@@ -8,12 +8,14 @@ project( Test.ColorConsole.Win32 )
 
 set( PROD_DIR ${CMAKE_SOURCE_DIR}/lib )
 set( MOCKS_DIR ${CMAKE_SOURCE_DIR}/test/Mocks )
+set( HELPERS_DIR ${CMAKE_SOURCE_DIR}/test/TestHelpers )
 
 include_directories(
     ${PROD_DIR}/sources
     ${PROD_DIR}/include
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${MOCKS_DIR}
+    ${HELPERS_DIR}
 )
 
 #
@@ -30,6 +32,7 @@ set( TEST_SRC_FILES
      ColorConsole_Win32_test.cpp
      ${MOCKS_DIR}/Win32_mock.cpp
      ${MOCKS_DIR}/Win32_expect.cpp
+     ${HELPERS_DIR}/TestHelpers.cpp
 )
 
 # Generate test target
