--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,6 +9,11 @@ if( ENABLE_TEST )
 
     include( CommonTestTargets.cmake )
 
+    set( PROD_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/../lib )
+    set( PROD_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../lib )
+    set( MOCKS_DIR ${CMAKE_CURRENT_LIST_DIR}/Mocks )
+    set( HELPERS_DIR ${CMAKE_CURRENT_LIST_DIR}/TestHelpers )
+
     #
     # Test modules
     #
