--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,6 @@
 cmake_minimum_required( VERSION 3.3 )
 
-option( ENABLE_TEST "Enable building tests" ON )
-option( COVERAGE_VERBOSE "Coverage analysis is performed in verbose mode" OFF )
-
-if( ENABLE_TEST )
-
-    enable_testing()
+if( BUILD_TESTING )
 
     include( CommonTestTargets.cmake )
 
